# asteroids

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  404.html  README.md  asteroid.py  asteroidfield.py  circleshape.py  constants.py  index.html  logger.py  main.py  mkdocs.yml  objects.inv  player.py  pyproject.toml  shot.py  validationfunctions.py
.github/workflows/: docs.yml
api/asteroid/: index.html
api/asteroidfield/: index.html
api/circleshape/: index.html
api/constants/: index.html
api/logger/: index.html
api/main/: index.html
api/player/: index.html
api/validationfunctions/: index.html
development/style/: index.html
development/testing/: index.html
docs/: index.md
docs/api/: asteroid.md  asteroidfield.md  circleshape.md  constants.md  logger.md  main.md  player.md  validationfunctions.md
docs/development/: style.md  testing.md
search/: search_index.json
tests/: __init__.py  conftest.py  test_asteroid.py  test_asteroidfield.py  test_circleshape.py  test_constants.py  test_logger.py  test_main.py  test_player.py  test_shot.py  test_validationfunctions.py
