[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_unreachable = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]  # Enable all rules, then exclude specific ones
ignore = [
    "D",    # pydocstring (unless you want enforced docstrings)
    "ANN101",  # Missing type for self
    "ANN102",  # Missing type for cls
    "S101", # allow assertions for tiger style, sys.flags.optimize == 0 ensures assertions run
]

[tool.pylint.messages_control]
max-line-length = 100
disable = []  # Start with nothing disabled for strictness
max-args = 5
max-locals = 15
max-returns = 3
max-branches = 12

[tool.bandit]
exclude_dirs = [".venv", "tests"]
