[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
]

[tool.setuptools]
py-modules = ["main", "player", "circleshape", "constants", "logger", "validationfunctions"]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_unreachable = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["ALL"]  # Enable all rules, then exclude specific ones
ignore = [
    "D",    # pydocstring (unless you want enforced docstrings)
    "ANN101",  # Missing type for self
    "ANN102",  # Missing type for cls
    "S101", # allow assertions for tiger style, sys.flags.optimize == 0 ensures assertions run
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN401",  # Allow Any in tests
    "SLF001",  # Allow private member access in tests
    "PLR2004", # Allow magic values in tests
]

[tool.pylint.messages_control]
max-line-length = 100
disable = []  # Start with nothing disabled for strictness
max-args = 5
max-locals = 15
max-returns = 3
max-branches = 12

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests that don't require pygame initialization",
    "integration: Tests requiring pygame.init()",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
