[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-material>=9.5.0",
]

[tool.setuptools]
py-modules = ["main", "player", "circleshape", "constants", "logger", "validationfunctions", "asteroid", "asteroidfield"]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_unreachable = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
exclude = ["tests/**", ".venv/**", ".vulture_whitelist.py"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["ALL"]  # Enable all rules, then exclude specific ones
ignore = [
    "D",    # pydocstring (unless you want enforced docstrings)
    "S101", # allow assertions for tiger style, sys.flags.optimize == 0 ensures assertions run
    "S311", # allow standard random for games (not cryptographic use)
    "INP001", # implicit namespace package (no __init__.py needed for simple projects)
    "RET501",  # Allow explicit return None (Tiger Style preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN401",  # Allow Any in tests
    "SLF001",  # Allow private member access in tests
    "PLR2004", # Allow magic values in tests
]
"player.py" = [
    "PLR2004", # Triangle vertex count (3) is geometric constant, not magic number
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",    # C0114 - docstrings only where they add value
    "missing-class-docstring",     # C0115 - docstrings only where they add value
    "missing-function-docstring",  # C0116 - docstrings only where they add value
]
extension-pkg-allow-list = ["pygame"]  # Allow pygame C extensions
max-args = 5
max-locals = 20  # Increased for Tiger Style validation patterns
max-returns = 6
max-branches = 20

[tool.pylint.design]
max-locals = 20

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests that don't require pygame initialization",
    "integration: Tests requiring pygame.init()",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
